# object_spawning_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/object_spawning_gazebo/: BallShooterModelPlugin.h  BallShooterPlugin.h
launch/: ball_shooter.launch  ball_trajectile_shooter.launch  empty_world.launch  particle_shooter.launch  particle_shooter_heavy.launch  pose_publisher.launch  spawn_model.launch  spawn_scenario.launch  spawn_sdf.launch  spawn_urdf.launch
matlab/: ball_inetria_matrix.m
models/ball/: model.sdf
models/orange_ping_pong_ball/: model.sdf
models/particle_sphere/: model.config  model.sdf
models/sphere/: model.config  model.sdf
models/test/: model.sdf
models/testing_surface/: model.config  model.sdf
rviz/: ball_shooter.rviz
scenarios/: projectile_ball.xml  static_sphere.xml
src/: BallShooterModelPlugin.cpp  BallShooterPlugin.cpp  sphere_shooter_plugin.cpp  target_pose_publisher_node.cpp
urdf/: sphere.urdf.xacro
worlds/: ball_shooter.world  particle_shooter.world  particle_shooter_heavy.world
